@@ -1,9 +1,8 @@
 {# begin {templatelocation} #}
-					<div style="padding-top:25px;padding-left:20px;padding-bottom:15px;">
-						<a href="{site_url}" rel="bookmark" title="{site_slogan}"
-style="font-style:italic;font-weight:bold;font-size:xx-large;color:#FFF; text-decoration:none;">
-							{site_name}
-						</a>
-						<div id="header-site-slogan">{site_slogan}</div>
-					</div>
+                    <div id="header-site-name">
+                        <a href="{site_url}" rel="bookmark" title="{site_slogan}">
+                            {site_name}
+                        </a>
+                        <div id="header-site-slogan">{site_slogan}</div>
+                    </div>
 {# end {templatelocation} #}
